// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
.c6 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c5 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 2px;
  border-color: #bfbfbf;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c3:checked + .c4 {
  border-color: #423b63;
  background-color: #423b63;
}

.c3:checked + .c4::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: pointer;
}

.c1 + .c0 {
  margin-left: 0.5rem;
}

.c1:hover .c4 {
  border-color: #423b63;
}

.c1 + .c7 {
  margin-left: 0.5rem;
}

<label
  class="c0 c1"
  direction="horizontal"
>
  <span
    class="c2"
  >
    <input
      class="c3"
      type="checkbox"
    />
    <span
      class="c4 c5"
    />
  </span>
  <div
    class="c6"
  >
    Checkbox
  </div>
</label>
`;

exports[`Checkbox should render with props disabled 1`] = `
.c6 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c5 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 2px;
  border-color: #bfbfbf;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c3:checked + .c4 {
  border-color: #423b63;
  background-color: #423b63;
}

.c3:checked + .c4::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c7 + .c0 {
  margin-left: 0.5rem;
}

.c7:hover .c4 {
  border-color: #423b63;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: not-allowed;
  opacity: 0.5;
}

.c1 + .c0 {
  margin-left: 0.5rem;
}

.c1 + .c8 {
  margin-left: 0.5rem;
}

<label
  class="c0 c1"
  direction="horizontal"
>
  <span
    class="c2"
  >
    <input
      class="c3"
      disabled=""
      type="checkbox"
    />
    <span
      class="c4 c5"
    />
  </span>
  <div
    class="c6"
  >
    Checkbox
  </div>
</label>
`;
